--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
 <li><p><a href="https://www.codeschool.com/courses/git-real-2">Git Real 2</a></p></li>
 </ol>
 
+<h2>Project Euler</h2>
+
+<p>Programming, as you know, is all about problem solving and understanding different domains. The language you work in doesn&#39;t matter (though, come on, Ruby is obviously the best).</p>
+
+<p>Practice approaching problems with a programmer&#39;s mindset by working your way through the Project Euler problems. Doing this is also a great way to sharpen up your skills with the more &quot;computer science-y&quot; side of code.</p>
+
+<h3><a href="http://projecteuler.net/">Project Euler</a></h3>
+
+<p><a href="http://projecteuler.net/">http://projecteuler.net/</a></p>
+
 <h1>Ruby &amp; Rails</h1>
 
 <h2>Ruby Review</h2>
@@ -141,13 +151,25 @@
 
 <p>The deeper you get into Ruby, the more you&#39;ll fall in love with the language. It&#39;s simplicity and clarity on the surface make it approachable and fun, but the more advanced features of the language make it a joy to work with as an experienced developer.</p>
 
-<p>Take some time to really explore Ruby:</p>
+<p>Take some time to really explore Ruby.</p>
 
-<p>https://www.codeschool.com/courses/ruby-bits
-https://www.codeschool.com/courses/ruby-bits-part-2
-http://teamtreehouse.com/library/ruby-20-walkthrough</p>
+<p>First, dive into Ruby 2.0. Sure, it&#39;s not the newest version any more, but you can learn a ton about the language by looking at what has changed from earlier versions. The jump from 1.9 to 2.0 was a big one.</p>
 
-<p>Join <a href="http://www.codewars.com/?language=ruby">Codewars</a> to test your knowledge and sharp your skills.</p>
+<h4><a href="http://teamtreehouse.com/library/ruby-20-walkthrough">Ruby 2.0 Walkthrough</a></h4>
+
+<p><a href="http://teamtreehouse.com/library/ruby-20-walkthrough">http://teamtreehouse.com/library/ruby-20-walkthrough</a></p>
+
+<p>Next, go through the Code School Ruby Bits courses. They dive into some stuff you may not currently use all the time, but you&#39;ll end up understanding some really cool (and more advanced) stuff.</p>
+
+<h4><a href="https://www.codeschool.com/courses/ruby-bits">Ruby Bits</a></h4>
+
+<p><a href="https://www.codeschool.com/courses/ruby-bits">https://www.codeschool.com/courses/ruby-bits</a></p>
+
+<h4><a href="https://www.codeschool.com/courses/ruby-bits-part-2">Ruby Bits 2</a></h4>
+
+<p><a href="https://www.codeschool.com/courses/ruby-bits-part-2">https://www.codeschool.com/courses/ruby-bits-part-2</a></p>
+
+<p>Love Project Euler, but which it had a slicker interface, and was more language-specific? Join <a href="http://www.codewars.com/?language=ruby">Codewars</a> to test your knowledge of Ruby (and other languages!) and sharpen your skills.</p>
 
 <h2>Rails Review</h2>
 
