Add heading for Codewars

--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
 
 <p><a href="https://www.codeschool.com/courses/ruby-bits-part-2">https://www.codeschool.com/courses/ruby-bits-part-2</a></p>
 
+<h3><a href="http://www.codewars.com/?language=ruby">Codewars</a></h3>
+
 <p>Love Project Euler, but which it had a slicker interface, and was more language-specific? Join <a href="http://www.codewars.com/?language=ruby">Codewars</a> to test your knowledge of Ruby (and other languages!) and sharpen your skills.</p>
 
 <h2>Rails Review</h2>
