Reformat Codewars section

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
 
 <h3><a href="http://www.codewars.com/?language=ruby">Codewars</a></h3>
 
+<p><a href="http://www.codewars.com/?language=ruby">http://www.codewars.com/?language=ruby</a></p>
+
 <p>Love Project Euler, but which it had a slicker interface, and was more language-specific? Join <a href="http://www.codewars.com/?language=ruby">Codewars</a> to test your knowledge of Ruby (and other languages!) and sharpen your skills.</p>
 
 <h2>Rails Review</h2>
