Start splitting up iOS section and add Objective-C resources

--- a/index.html
+++ b/index.html
@@ -304,11 +304,43 @@ http://nodeschool.io/</p>
 
 <h2>Objective-C</h2>
 
-<p>https://www.codeschool.com/courses/try-objective-c</p>
+<p>Before even thinking about iOS development, you need to become proficient at the Objective-C language. Just like we learned the fundamentals of Ruby before jumping into the behemoth that is the Rails framework, you&#39;ll want to grok the fundamentals of Objective-C before wrestling with the XCode and the whole iOS ecosystem.</p>
+
+<h3><a href="https://www.codeschool.com/courses/try-objective-c">Try Objective-C</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/try-objective-c">https://www.codeschool.com/courses/try-objective-c</a></p>
+
+<p>Code School&#39;s course is a great way to quickly cover the basics of the Objective-C language.</p>
+
+<h3><a href="http://www.bignerdranch.com/we-write/objective-c-programming.html">Objective-C Programming: The Big Nerd Ranch Guide</a></h3>
+
+<p><a href="http://www.bignerdranch.com/we-write/objective-c-programming.html">http://www.bignerdranch.com/we-write/objective-c-programming.html</a></p>
+
+<p>This is <em>the</em> book on Objective-C. It&#39;ll get you fluent in C, Objective-C, and some other great programming concepts. It&#39;s worth a read and a re-read.</p>
 
 <h2>iOS</h2>
 
 <p>https://www.codeschool.com/courses/try-ios</p>
+
+<p>Big nerd ranch iOS Programming: The Big Nerd Ranch Guide</p>
+
+<p>http://www.bignerdranch.com/we-write/ios-programming.html</p>
+
+<h2>RubyMotion</h2>
+
+<p>(http://www.rubymotion.com)</p>
+
+<p>getting started: http://www.rubymotion.com/developer-center/guides/getting-started/</p>
+
+<p>ns screencast http://nsscreencast.com/episodes/29-rubymotion</p>
+
+<p>pragmatic programmer ruby motion video http://pragmaticstudio.com/screencasts/rubymotion</p>
+
+<p>pragmatic programmer RubyMotion book</p>
+
+<p>http://pragprog.com/book/carubym/rubymotion</p>
+
+<p>BubbleWrap wrapper that makes RubyMotion more Ruby like: https://github.com/rubymotion/BubbleWrap</p>
 
 <h1>About</h1>
 
