Add RubyMotion resources

--- a/index.html
+++ b/index.html
@@ -320,27 +320,95 @@ http://nodeschool.io/</p>
 
 <h2>iOS</h2>
 
-<p>https://www.codeschool.com/courses/try-ios</p>
+<p>Now that you&#39;ve got a handle on Objective-C, you can dive into the iOS ecosystem and start writing apps for iOS devices of all shapes and sizes. Get your feet wet with these resources.</p>
 
-<p>Big nerd ranch iOS Programming: The Big Nerd Ranch Guide</p>
+<h3><a href="https://www.codeschool.com/courses/try-ios">Try iOS</a></h3>
 
-<p>http://www.bignerdranch.com/we-write/ios-programming.html</p>
+<p><a href="https://www.codeschool.com/courses/try-ios">https://www.codeschool.com/courses/try-ios</a></p>
+
+<p>Get a quick, broad overview of iOS and the anatomy of an iOS app with Code School&#39;s basic course.</p>
+
+<p>When you finish that, you can complete the rest of the iOS track.</p>
+
+<h3><a href="https://www.codeschool.com/courses/ios-operation-models">iOS Operation: Models</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/ios-operation-models">https://www.codeschool.com/courses/ios-operation-models</a></p>
+
+<p>Learn iOS development as you organize and move your app data from Controllers to Models. This sequel to Try iOS will help you master the use of Models.</p>
+
+<h3><a href="https://www.codeschool.com/courses/ios-operation-mapkit">iOS Operation: MapKit</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/ios-operation-mapkit">https://www.codeschool.com/courses/ios-operation-mapkit</a></p>
+
+<p>Learn Apple&#39;s MapKit framework for adding real-world location data to your app. Display location data loaded from the web and combine frameworks to enrich data.</p>
+
+<h3><a href="https://www.codeschool.com/courses/exploring-google-maps-for-ios">Exploring Google Maps for iOS</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/exploring-google-maps-for-ios">https://www.codeschool.com/courses/exploring-google-maps-for-ios</a></p>
+
+<p>Learn how to display Google Maps in your app with the Google Maps SDK for iOS. Get started with the basics and use interactive maps to learn as you explore!</p>
+
+<h3><a href="https://www.codeschool.com/courses/core-ios-7">Core iOS 7</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/core-ios-7">https://www.codeschool.com/courses/core-ios-7</a></p>
+
+<p>Quickly get up to speed on the core changes of iOS 7. Make your app stand out from the crowd by mastering new APIs and take advantage of great Xcode updates.</p>
+
+<h3><a href="http://www.bignerdranch.com/we-write/ios-programming.html">iOS Programming: The Big Nerd Ranch Guide</a></h3>
+
+<p><a href="http://www.bignerdranch.com/we-write/ios-programming.html">http://www.bignerdranch.com/we-write/ios-programming.html</a></p>
+
+<p>This is <em>the</em> book on iOS programming. Just like it&#39;s <em><a href="http://www.bignerdranch.com/we-write/objective-c-programming.html">Objective-C Programming: The Big Nerd Ranch Guide</a></em> cousin, it&#39;s both comprehensive and approachable. Read this one over and over again; it&#39;s a great reference.</p>
+
+<h3><a href="http://nsscreencast.com/">NSScreencast</a></h3>
+
+<p><a href="http://nsscreencast.com/">http://nsscreencast.com/</a></p>
+
+<p>Weekly bite-sized screencasts on iOS development, a la RailsCasts.</p>
+
+<h3><a href="http://ios.devtools.me/">iOS Dev Tools</a></h3>
+
+<p><a href="http://ios.devtools.me/">http://ios.devtools.me/</a></p>
+
+<p>iOS Dev Tools is an incredible list of great iOS development tools, including websites, desktop and mobile apps, back-end services, and design and learning resources.</p>
 
 <h2>RubyMotion</h2>
 
-<p>(http://www.rubymotion.com)</p>
+<p>RubyMotion is a toolchain that lets you develop (and test!) native iOS and OS X applications using Ruby. You&#39;ll still need to really understand the iOS SDK (and, it&#39;s definitely recommended to learn Objective-C first, even though RubyMotion lets you code in Ruby), but it&#39;s nice to be able to write iOS applications in the language we all know and love.</p>
 
-<p>getting started: http://www.rubymotion.com/developer-center/guides/getting-started/</p>
+<p>Once you buy a <a href="http://www.rubymotion.com/">RubyMotion</a> license, dive into the following resources:</p>
 
-<p>ns screencast http://nsscreencast.com/episodes/29-rubymotion</p>
+<h3><a href="http://www.rubymotion.com/developer-center/guides/getting-started/">RubyMotion Getting Started</a></h3>
 
-<p>pragmatic programmer ruby motion video http://pragmaticstudio.com/screencasts/rubymotion</p>
+<p>This is a nice, short guide that will get you up and running with RubyMotion quickly with the classic &#39;Hello World&#39; application.</p>
 
-<p>pragmatic programmer RubyMotion book</p>
+<h3><a href="http://nsscreencast.com/episodes/29-rubymotion">RubyMotion NSScreencast</a></h3>
 
-<p>http://pragprog.com/book/carubym/rubymotion</p>
+<p><a href="http://nsscreencast.com/episodes/29-rubymotion">http://nsscreencast.com/episodes/29-rubymotion</a></p>
 
-<p>BubbleWrap wrapper that makes RubyMotion more Ruby like: https://github.com/rubymotion/BubbleWrap</p>
+<p>Take a deeper dive with the NSScreencast on RubyMotion. It&#39;s a good one.</p>
+
+<h3><a href="http://pragmaticstudio.com/screencasts/rubymotion">Pragmatic Programmer Ruby Motion Video</a></h3>
+
+<p><a href="http://pragmaticstudio.com/screencasts/rubymotion">http://pragmaticstudio.com/screencasts/rubymotion</a></p>
+
+<p>This is a great, 50-minute screencast that teaches you how to create a basic iOS app using RubyMotion. It does assume you are familiar with the iOS SDK, however, so keep that in mind.</p>
+
+<h3><a href="http://pragprog.com/book/carubym/rubymotion">The Pragmatic Programmer: RubyMotion</a></h3>
+
+<p><a href="http://pragprog.com/book/carubym/rubymotion">http://pragprog.com/book/carubym/rubymotion</a></p>
+
+<p>From the book&#39;s description:</p>
+
+<blockquote>
+<p>Make beautiful apps with beautiful code: use the elegant and concise Ruby programming language with RubyMotion to write truly native iOS apps with less code while having more fun. You&#39;ll learn the essentials of creating great apps, and by the end of this book, you&#39;ll have built a fully functional API-driven app. Whether you&#39;re a newcomer looking for an alternative to Objective-C or a hardened Rails veteran, RubyMotion allows you to create gorgeous apps with no compromise in performance or developer happiness.</p>
+</blockquote>
+
+<h3><a href="https://github.com/rubymotion/BubbleWrap">BubbleWrap</a></h3>
+
+<p><a href="https://github.com/rubymotion/BubbleWrap">https://github.com/rubymotion/BubbleWrap</a></p>
+
+<p>Play around with this awesome wrapper for RubyMotion that makes it more Ruby-like. It&#39;s awesome.</p>
 
 <h1>About</h1>
 
