Add screencasting details

--- a/index.html
+++ b/index.html
@@ -87,7 +87,25 @@
 
 <h2>Screencasts</h2>
 
-<p>Talk about doing screencasts (maybe even for IronCasts).</p>
+<p>Another great way to get your work noticed and your voice out into the Ruby and larger programming communities is to create screencasts. Think about the resources you&#39;d have loved to find online, and turn them into bite-sized video lessons.</p>
+
+<p>A great place to start is to turn a blog post or two that you&#39;ve written into a tutorial. Try to keep them short, and easily digestable.</p>
+
+<p>Once we launch IronCasts, you can even submit them there. More details on that soon.</p>
+
+<p>Check out the following screencasts to learn a thing or two, but also to see what kinds of formats work (and don&#39;t work) well. Try modeling your own screencasts after the ones you like best.</p>
+
+<h3><a href="http://railscasts.com/">RailsCasts</a></h3>
+
+<p><a href="http://railscasts.com/">http://railscasts.com/</a></p>
+
+<p>Now out of date, and no longer being updated, but has a ton of really awesome, quality content.</p>
+
+<h3><a href="http://rubytapas.com">Ruby Tapas</a></h3>
+
+<p><a href="http://rubytapas.com">http://rubytapas.com</a></p>
+
+<p>You have to pay for these amazing, short screencasts from Avdi Grimm, but it&#39;s so worth it. These vary from beginner to advanced, but each and every one of them teaches something really neat about the Ruby language. If you were to create screencasts along the same lines, you couldn&#39;t go wrong.</p>
 
 <h2>Meetups</h2>
 
