--- a/index.html
+++ b/index.html
@@ -113,7 +113,33 @@
 
 <h2>Hackathons</h2>
 
-<p>Talk about participating in hackathons.</p>
+<p>One of the best things you can do to increase your value in the tech world is to meet as many people as possible and let as many of them as possible see what a great developer you are. There&#39;s really no better bang for your buck in this regard than participating in hackathons.</p>
+
+<p>They&#39;re also really fun, which is a nice bonus. And they are great places to play around with new technologies and get better at writing code quickly.</p>
+
+<p><a href="http://challengepost.com/">ChallengePost</a></p>
+
+<p><a href="http://challengepost.com/">http://challengepost.com/</a></p>
+
+<p>ChallengePost is a great place to find both in person and online hackathons. You should lean towards doing in person ones, but if you also want to find cool problems to work on in your spare time, this is a great resource.</p>
+
+<p><a href="http://hackathon.meetup.com/">Meetup</a></p>
+
+<p><a href="http://hackathon.meetup.com/">http://hackathon.meetup.com/</a></p>
+
+<p>There are tons of meetup groups dedicated to hosting and participating in hackathons. This is a great place to see what&#39;s out there.</p>
+
+<p><a href="https://www.hackerleague.org/hackathons">Hacker League</a></p>
+
+<p><a href="https://www.hackerleague.org/hackathons">https://www.hackerleague.org/hackathons</a></p>
+
+<p>This isn&#39;t the most organized resource, but it lists huge numbers of hackathons you can participate in. It&#39;s worth checking out every once in a while.</p>
+
+<p><a href="http://www.hackathon.io/">Hackathon.io</a></p>
+
+<p><a href="http://www.hackathon.io/">http://www.hackathon.io/</a></p>
+
+<p>Yet another great place to find hackathons happening in your neck of the woods.</p>
 
 <h2>Conferences</h2>
 
