Fix element size in hackathon section

--- a/index.html
+++ b/index.html
@@ -117,25 +117,25 @@
 
 <p>They&#39;re also really fun, which is a nice bonus. And they are great places to play around with new technologies and get better at writing code quickly.</p>
 
-<p><a href="http://challengepost.com/">ChallengePost</a></p>
+<h3><a href="http://challengepost.com/">ChallengePost</a></h3>
 
 <p><a href="http://challengepost.com/">http://challengepost.com/</a></p>
 
 <p>ChallengePost is a great place to find both in person and online hackathons. You should lean towards doing in person ones, but if you also want to find cool problems to work on in your spare time, this is a great resource.</p>
 
-<p><a href="http://hackathon.meetup.com/">Meetup</a></p>
+<h3><a href="http://hackathon.meetup.com/">Meetup</a></h3>
 
 <p><a href="http://hackathon.meetup.com/">http://hackathon.meetup.com/</a></p>
 
 <p>There are tons of meetup groups dedicated to hosting and participating in hackathons. This is a great place to see what&#39;s out there.</p>
 
-<p><a href="https://www.hackerleague.org/hackathons">Hacker League</a></p>
+<h3><a href="https://www.hackerleague.org/hackathons">Hacker League</a></h3>
 
 <p><a href="https://www.hackerleague.org/hackathons">https://www.hackerleague.org/hackathons</a></p>
 
 <p>This isn&#39;t the most organized resource, but it lists huge numbers of hackathons you can participate in. It&#39;s worth checking out every once in a while.</p>
 
-<p><a href="http://www.hackathon.io/">Hackathon.io</a></p>
+<h3><a href="http://www.hackathon.io/">Hackathon.io</a></h3>
 
 <p><a href="http://www.hackathon.io/">http://www.hackathon.io/</a></p>
 
