Change name of hackathon resource

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <p>ChallengePost is a great place to find both in person and online hackathons. You should lean towards doing in person ones, but if you also want to find cool problems to work on in your spare time, this is a great resource.</p>
 
-<h3><a href="http://hackathon.meetup.com/">Meetup</a></h3>
+<h3><a href="http://hackathon.meetup.com/">Meetup.com</a></h3>
 
 <p><a href="http://hackathon.meetup.com/">http://hackathon.meetup.com/</a></p>
 
