Work on Meetups section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,17 @@
 
 <h2>Meetups</h2>
 
-<p>Talk about going to and presenting at all the great meetups around the city.</p>
+<p>Want to meet more developers in your area? Get more experience presenting? There&#39;s a meetup or twenty for you!</p>
+
+<p>Attending meetups is a great way to get involved in the Ruby and larger developer communities. It&#39;s also a great way to check out new technologies you&#39;re interested in.</p>
+
+<p>Need some practice presenting? Want to polish up an idea before submitting to a CFP for conferences? Meetups are great places to present. There are so many out there that they are always looking for people to talk. You&#39;ll be a shoo-in.</p>
+
+<h3><a href="http://www.meetup.com/">Meetup.com</a></h3>
+
+<p><a href="http://www.meetup.com/">http://www.meetup.com/</a></p>
+
+<p>There are, of course, other places to find meetups in your area, but none as great as <a href="http://www.meetup.com/">Meetup.com</a>. You can find a meetup for everything here.</p>
 
 <h2>Hackathons</h2>
 
