Fix Ruby Diving Deeper layout

--- a/index.html
+++ b/index.html
@@ -227,21 +227,25 @@
 
 <p>Take some time to really explore Ruby.</p>
 
-<p>First, dive into Ruby 2.0. Sure, it&#39;s not the newest version any more, but you can learn a ton about the language by looking at what has changed from earlier versions. The jump from 1.9 to 2.0 was a big one.</p>
-
 <h3><a href="http://teamtreehouse.com/library/ruby-20-walkthrough">Ruby 2.0 Walkthrough</a></h3>
 
 <p><a href="http://teamtreehouse.com/library/ruby-20-walkthrough">http://teamtreehouse.com/library/ruby-20-walkthrough</a></p>
 
-<p>Next, go through the Code School Ruby Bits courses. They dive into some stuff you may not currently use all the time, but you&#39;ll end up understanding some really cool (and more advanced) stuff.</p>
+<p>First, dive into Ruby 2.0. Sure, it&#39;s not the newest version any more, but you can learn a ton about the language by looking at what has changed from earlier versions. The jump from 1.9 to 2.0 was a big one.</p>
 
 <h3><a href="https://www.codeschool.com/courses/ruby-bits">Ruby Bits</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/ruby-bits">https://www.codeschool.com/courses/ruby-bits</a></p>
 
+<p>Next, go through the Code School Ruby Bits courses. They dive into some stuff you may not currently use all the time, but you&#39;ll end up understanding some really cool (and more advanced) stuff.</p>
+
+<p>In the first Ruby Bits course, learn the core bits every Ruby programmer should know. This Ruby tutorial builds upon the basics to keep enhancing your Ruby knowledge.</p>
+
 <h3><a href="https://www.codeschool.com/courses/ruby-bits-part-2">Ruby Bits 2</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/ruby-bits-part-2">https://www.codeschool.com/courses/ruby-bits-part-2</a></p>
+
+<p>Learn the more advanced bits every Ruby programmer should know. This advanced Ruby tutorial will help you take your Ruby knowledge to the next level.</p>
 
 <h3><a href="http://www.codewars.com/?language=ruby">Codewars</a></h3>
 
