--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 <h2>Ruby Review</h2>
 
-<h3>Foundations</h3>
+<h3>Ruby Foundations</h3>
 
 <p>It never hurts to review the fundamentals of a language. More importantly, though, you&#39;ll gain whole new levels of understanding when you approach foundational topics as a more experienced programmer.</p>
 
@@ -256,51 +256,77 @@
 
 <h2>Rails Review</h2>
 
+<h3>Rails Foundations</h3>
+
 <h3><a href="http://teamtreehouse.com/library/build-a-todo-list-application-with-rails-4">Build a Todo List Application with Rails 4</a></h3>
 
 <p><a href="http://teamtreehouse.com/library/build-a-todo-list-application-with-rails-4%5D">http://teamtreehouse.com/library/build-a-todo-list-application-with-rails-4</a></p>
+
+<p>In this project, we&#39;ll develop a simple todo list application called ODOT.</p>
 
 <h3><a href="http://teamtreehouse.com/library/build-a-simple-ruby-on-rails-application">Build a Simple Ruby on Rails Application</a></h3>
 
 <p><a href="http://teamtreehouse.com/library/build-a-simple-ruby-on-rails-application">http://teamtreehouse.com/library/build-a-simple-ruby-on-rails-application</a></p>
 
+<p>This project will walk us through creating a social networking web application with features similar to Facebook.</p>
+
 <h3><a href="https://www.codeschool.com/courses/rails-for-zombies-redux">Rails for Zombies Redux</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/rails-for-zombies-redux">https://www.codeschool.com/courses/rails-for-zombies-redux</a></p>
+
+<p>Rails for Zombies will teach you all the Rails basics with a zombie flair.</p>
 
 <h3><a href="https://www.codeschool.com/courses/rails-for-zombies-2">Rails for Zombies 2</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/rails-for-zombies-2">https://www.codeschool.com/courses/rails-for-zombies-2</a></p>
 
+<p>Learn more Rails with this sequel to the infamous Rails for Zombies course. Increase your Ruby on Rails knowledge with even more zombie learning.</p>
+
 <h3><a href="https://www.codeschool.com/courses/rails-4-zombie-outlaws">Rails 4 Zombie Outlaws</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/rails-4-zombie-outlaws">https://www.codeschool.com/courses/rails-4-zombie-outlaws</a></p>
 
-<h2>Advanced Rails/Testing</h2>
+<p>Learn to build faster and more secure web apps with Rails 4. Review the Rails updates that will help get your apps up to speed on Rails 4 best practices.</p>
+
+<h3>Deeper Dive/Testing</h3>
 
 <h3><a href="https://www.codeschool.com/courses/rails-4-patterns">Rails 4 Patterns</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/rails-4-patterns">https://www.codeschool.com/courses/rails-4-patterns</a></p>
 
+<p>Learn helpful patterns and techniques for building and maintaining complex Rails applications. Make your applications easily scale in size and complexity.</p>
+
 <h3><a href="http://teamtreehouse.com/library/advanced-social-features-in-ruby-on-rails">Advanced Social Features in Ruby on Rails</a></h3>
 
 <p><a href="http://teamtreehouse.com/library/advanced-social-features-in-ruby-on-rails">http://teamtreehouse.com/library/advanced-social-features-in-ruby-on-rails</a></p>
+
+<p>In an earlier Treehouse project, you created a simple social network. In this project, we&#39;ll be adding file uploads, image galleries, and activity feeds to that application. We&#39;ll also be implementing push updates via polling.</p>
 
 <h3><a href="https://www.codeschool.com/courses/rails-best-practices">Rails Best Practices</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/rails-best-practices">https://www.codeschool.com/courses/rails-best-practices</a></p>
 
+<p>Learn Rails best practices with the most useful Rails patterns and techniques.</p>
+
 <h3><a href="https://www.codeschool.com/courses/rails-testing-for-zombies">Rails Testing for Zombies</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/rails-testing-for-zombies">https://www.codeschool.com/courses/rails-testing-for-zombies</a></p>
+
+<p>Learn Rails testing for your applications with these testing fundamentals. Brush up on testing best practices with Rails Testing for Zombies.</p>
 
 <h3><a href="https://www.codeschool.com/courses/testing-with-rspec">Testing with RSpec</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/testing-with-rspec">https://www.codeschool.com/courses/testing-with-rspec</a></p>
 
+<p>Learn to use this trusted testing framework for Ruby applications. Brush up on testing best practices with the Testing with RSpec course.</p>
+
 <h3><a href="https://www.codeschool.com/courses/surviving-apis-with-rails">Surviving APIs with Rails</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/surviving-apis-with-rails">https://www.codeschool.com/courses/surviving-apis-with-rails</a></p>
+
+<p>Learn how to build and test REST APIs using Ruby on Rails. See how to leverage the HTTP protocol to create robust web APIs that can serve different client applications at the same time.</p>
+
+<p>Included file ruby<em>rails/rails</em>advanced.md not found in _includes directory</p>
 
 <h2>Books</h2>
 
