--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
 
 <h3>Rails Foundations</h3>
 
+<p>With such a large framework, it&#39;s easy to let some of the basics slip through the cracks. Review these fundamentals of the Rails framework. Now that you&#39;re a more experienced developer, you&#39;ll find gems in all of these resources that increase your understanding of Ruby and Rails.</p>
+
 <h3><a href="http://teamtreehouse.com/library/build-a-todo-list-application-with-rails-4">Build a Todo List Application with Rails 4</a></h3>
 
 <p><a href="http://teamtreehouse.com/library/build-a-todo-list-application-with-rails-4%5D">http://teamtreehouse.com/library/build-a-todo-list-application-with-rails-4</a></p>
