Add intro to Rails Deeper Dive/Testing section

--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
 
 <h3>Deeper Dive/Testing</h3>
 
+<p>Some (or all) of these resources should still be review for you. But they dive more deeply into the framework, and cover testing. Go through them and absorb as much as possible. You&#39;ll pick up new patterns that you can start using in the applications you build.</p>
+
 <h3><a href="https://www.codeschool.com/courses/rails-4-patterns">Rails 4 Patterns</a></h3>
 
 <p><a href="https://www.codeschool.com/courses/rails-4-patterns">https://www.codeschool.com/courses/rails-4-patterns</a></p>
