Update Ruby/Rails books section

--- a/index.html
+++ b/index.html
@@ -336,20 +336,111 @@
 
 <p>These are some of our favorite books on Ruby and Rails.</p>
 
-<h3>Learn Ruby on Rails</h3>
+<h3><a href="http://learn-rails.com/students">Learn Ruby on Rails</a></h3>
 
-<p>http://learn-rails.com/students
-FLATIRON discount code</p>
+<p><a href="http://learn-rails.com/students">http://learn-rails.com/students</a></p>
 
-<h3>Eloquent Ruby</h3>
+<p>This new book by Daniel Kehoe is an excellent way to review the basics of Rails. Regardless of how comfortable you feel with developing Rails apps, you should read this.</p>
 
-<h3>Everyday Rails Testing with RSpec</h3>
+<p>To get it for free, use the discount code: FLATIRON</p>
 
-<h3>Refactoring Ruby</h3>
+<h3><a href="http://www.amazon.com/gp/product/0321584104">Eloquent Ruby</a></h3>
 
-<h3>The Rails 4 Way</h3>
+<p><a href="http://www.amazon.com/gp/product/0321584104">http://www.amazon.com/gp/product/0321584104</a></p>
 
-<h3>Practical Object Oriented Design in Ruby</h3>
+<blockquote>
+<p>It&#39;s easy to write correct Ruby code, but to gain the fluency needed to write <em>great</em> Ruby code, you must go beyond syntax and absorb the &quot;Ruby way&quot; of thinking and problem solving. In <strong><em>Eloquent Ruby</em></strong>, Russ Olsen helps you write Ruby like true Rubyists do so you can leverage its immense, surprising power.</p>
+</blockquote>
+
+<h3><a href="https://leanpub.com/everydayrailsrspec">Everyday Rails Testing with RSpec</a></h3>
+
+<p><a href="https://leanpub.com/everydayrailsrspec">https://leanpub.com/everydayrailsrspec</a></p>
+
+<blockquote>
+<p>A practical approach to test-driven development. Real-world advice for adding reliable tests to your Rails apps with RSpec</p>
+</blockquote>
+
+<h3><a href="http://www.amazon.com/Refactoring-Edition-Addison-Wesley-Professional-Series/dp/0321984137">Refactoring: Ruby Edition</a></h3>
+
+<p><a href="http://www.amazon.com/Refactoring-Edition-Addison-Wesley-Professional-Series/dp/0321984137">http://www.amazon.com/Refactoring-Edition-Addison-Wesley-Professional-Series/dp/0321984137</a></p>
+
+<blockquote>
+<p>The definitive refactoring guide, fully revamped for Ruby. With refactoring, programmers can transform even the most chaotic software into well-designed systems that are far easier to evolve and maintain. What&#39;s more, they can do it one step at a time, through a series of simple, proven steps. Now, there&#39;s an authoritative and extensively updated version of Martin Fowler&#39;s classic refactoring book that utilizes Ruby examples and idioms throughout.</p>
+</blockquote>
+
+<h3><a href="http://www.amazon.com/gp/product/0321545044">Refactoring in Ruby</a></h3>
+
+<p><a href="http://www.amazon.com/gp/product/0321545044">http://www.amazon.com/gp/product/0321545044</a></p>
+
+<p>This is a grea companion book to <em>Refactoring: Ruby Edition</em>. Treat it like a workbook. It&#39;s fantastic.</p>
+
+<h3><a href="https://leanpub.com/tr4w">The Rails 4 Way</a></h3>
+
+<p><a href="https://leanpub.com/tr4w">https://leanpub.com/tr4w</a></p>
+
+<blockquote>
+<p><em>The Rails 4 Way</em> is the only comprehensive, authoritative guide to delivering production-quality code with Rails 4.1. Pioneering Rails expert Obie Fernandez and his team of leading Rails experts illuminate the entire set of Rails APIs, along with the idioms, design approaches, and libraries that make developing applications with Rails so powerful. Drawing on their unsurpassed experience and track record, they address the real challenges development teams face, showing how to use Rails to maximize your productivity.</p>
+</blockquote>
+
+<h3><a href="http://www.manning.com/bigg2/">Rails 4 in Action</a></h3>
+
+<p><a href="http://www.manning.com/bigg2/">http://www.manning.com/bigg2/</a></p>
+
+<blockquote>
+<p><em>Rails 4 in Action</em> is a comprehensive introduction to Rails that guides you hands-on through all you&#39;ll need to become a competent and confident Rails developer.</p>
+</blockquote>
+
+<h3><a href="http://www.amazon.com/Practical-Object-Oriented-Design-Ruby-Addison-Wesley/dp/0321721330">Practical Object Oriented Design in Ruby</a></h3>
+
+<p><a href="http://www.amazon.com/Practical-Object-Oriented-Design-Ruby-Addison-Wesley/dp/0321721330">http://www.amazon.com/Practical-Object-Oriented-Design-Ruby-Addison-Wesley/dp/0321721330</a></p>
+
+<blockquote>
+<p>Ruby&#39;s widely admired ease of use has a downside: Too many Ruby and Rails applications have been created without concern for their long-term maintenance or eveolution. The Web is awash in Ruby code that is now virtually impossible to change or extend. This text helps you solve that problem by using powerful real-world object-oriented design techniques, which it thoroughly explains using simple and practical Ruby examples.</p>
+</blockquote>
+
+<p>Sandi Metz&#39; book should be read and reread and reread again and again. It&#39;s incredible.</p>
+
+<h3><a href="https://leanpub.com/4rulesofsimpledesign">Understanding the 4 Rules of Simple Design</a></h3>
+
+<p><a href="https://leanpub.com/4rulesofsimpledesign">https://leanpub.com/4rulesofsimpledesign</a></p>
+
+<blockquote>
+<p>The only thing we truly know about software development is that we can expect changes to our system. Through concrete examples, let&#39;s explore ways to build flexible, adaptable software systems by better understanding Kent Beck&#39;s 4 Rules of Simple Design.</p>
+</blockquote>
+
+<h3><a href="http://www.confidentruby.com/">Confident Ruby</a></h3>
+
+<p><a href="http://www.confidentruby.com/">http://www.confidentruby.com/</a></p>
+
+<blockquote>
+<p><em>Confident Ruby</em> is, first and foremost, a book about joy. It&#39;s about the joy I found when I first discovered how elegantly and succinctly I could state problems in Ruby code. It&#39;s about the joy I gradually lost as the &quot;real world&quot; snuck in and cluttered my code with distracting edge case scenarios, error handling, and checks for nil. And it&#39;s about how I came to recapture that joy, by employing small patterns and stylistic choices to make each method tell a coherent story.</p>
+
+<p>— Avdi Grimm</p>
+</blockquote>
+
+<h3><a href="http://exceptionalruby.com/">Exceptional Ruby</a></h3>
+
+<p><a href="http://exceptionalruby.com/">http://exceptionalruby.com/</a></p>
+
+<blockquote>
+<p>Exceptional Ruby is an in-depth guide to exceptions and failure handling in Ruby. It covers everything from the mechanics of how exceptions work to how to design a robust failure management architecture for your app or library.</p>
+
+<p><em>Exceptional Ruby</em> will help you write cleaner, more resilient Ruby code.</p>
+</blockquote>
+
+<h3><a href="http://objectsonrails.com/">Objects on Rails</a></h3>
+
+<p><a href="http://objectsonrails.com/">http://objectsonrails.com/</a></p>
+
+<blockquote>
+<p><em>Objects on Rails</em> is a &quot;developer&#39;s notebook&quot; documenting some guidelines, techniques, and ideas for applying classic object-oriented thought to Ruby on Rails applications. This book is aimed at the working Rails developer who is looking to grow and evolve Rails projects while keeping them flexible, maintainable, and robust.</p>
+</blockquote>
+
+<h3><a href="http://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">Programming Ruby 1.9 &amp; 2.0 (The Pickaxe Book)</a></h3>
+
+<p><a href="http://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">http://pragprog.com/book/ruby4/programming-ruby-1-9-2-0</a></p>
+
+<p>This is the definitive reference to Ruby. It&#39;s a must have.</p>
 
 <h1>JavaScript</h1>
 
