Organize JavaScript books

--- a/index.html
+++ b/index.html
@@ -473,14 +473,25 @@ https://www.codeschool.com/courses/jquery-the-return-flight</p>
 
 <h2>Books</h2>
 
-<p>https://leanpub.com/javascript-allonge/read 
-http://tddjs.com/ 
-http://www.amazon.com/Pro-JavaScript-Design-Patterns-Object-Oriented/dp/159059908X 
-http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742</p>
+<h3><a href="https://leanpub.com/javascript-allonge/read">JavaScript Allongé</a></h3>
 
-<h3>Eloquent Javascript</h3>
+<p><a href="https://leanpub.com/javascript-allonge/read">https://leanpub.com/javascript-allonge/read</a></p>
 
-<h3>Javascript the Good Parts</h3>
+<h3><a href="http://tddjs.com/">Test-Driven JavaScript Development</a></h3>
+
+<p><a href="http://tddjs.com/">http://tddjs.com/</a></p>
+
+<h3><a href="http://www.amazon.com/Pro-JavaScript-Design-Patterns-Object-Oriented/dp/159059908X">Pro JavaScript Design Patterns</a></h3>
+
+<p><a href="http://www.amazon.com/Pro-JavaScript-Design-Patterns-Object-Oriented/dp/159059908X">http://www.amazon.com/Pro-JavaScript-Design-Patterns-Object-Oriented/dp/159059908X</a></p>
+
+<h3><a href="http://www.amazon.com/Eloquent-JavaScript-Modern-Introduction-Programming/dp/1593272820">Eloquent JavaScript</a></h3>
+
+<p><a href="http://www.amazon.com/Eloquent-JavaScript-Modern-Introduction-Programming/dp/1593272820">http://www.amazon.com/Eloquent-JavaScript-Modern-Introduction-Programming/dp/1593272820</a></p>
+
+<h3><a href="http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742">JavaScript: The Good Parts</a></h3>
+
+<p><a href="http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742">http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742</a></p>
 
 <h2>Frameworks</h2>
 
