Add Destroy All Software to screencasts

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
 
 <p>You have to pay for these amazing, short screencasts from Avdi Grimm, but it&#39;s so worth it. These vary from beginner to advanced, but each and every one of them teaches something really neat about the Ruby language. If you were to create screencasts along the same lines, you couldn&#39;t go wrong.</p>
 
+<h3><a href="https://www.destroyallsoftware.com/screencasts">Destroy All Software</a></h3>
+
+<p><a href="https://www.destroyallsoftware.com/screencasts">https://www.destroyallsoftware.com/screencasts</a></p>
+
+<p>Solid, solid screencasts. No longer being made, but the ones that exist are great examples of what can be acomplished in a 10-15 minute video. They are a bit pricey, but we&#39;re working on getting them on the cheap.</p>
+
 <h2>Meetups</h2>
 
 <p>Want to meet more developers in your area? Get more experience presenting? There&#39;s a meetup or twenty for you!</p>
