Start adding CS/Big-O resources

--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
 
 <p>Practice approaching problems with a programmer&#39;s mindset by working your way through the Project Euler problems. Doing this is also a great way to sharpen up your skills with the more &quot;computer science-y&quot; side of code.</p>
 
+<p>Included file general/algorithms.md not found in _includes directory</p>
+
 <h1>Ruby &amp; Rails</h1>
 
 <h2>Ruby Review</h2>
