Fix broken include in general section

--- a/index.html
+++ b/index.html
@@ -214,7 +214,55 @@
 
 <p>Practice approaching problems with a programmer&#39;s mindset by working your way through the Project Euler problems. Doing this is also a great way to sharpen up your skills with the more &quot;computer science-y&quot; side of code.</p>
 
-<p>Included file general/algorithms.md not found in _includes directory</p>
+<h2>Computer Science</h2>
+
+<h3>Fundamentals</h3>
+
+<p>Computer Science 101 - (Review) https://www.coursera.org/course/cs101</p>
+
+<p>Intro to Computer Science - https://www.udacity.com/course/cs101</p>
+
+<p>Introduction to Computer Programming, Part 1 https://www.edx.org/course/iitbombayx/iitbombayx-cs101-1x-introduction-1447#.U2uWha1dXvY</p>
+
+<p>Introduction to Computer Programming, Part 2 https://www.edx.org/course/iitbombayx/iitbombayx-cs101-2x-introduction-1448#.U2uWj61dXvY</p>
+
+<p>Principles of Computing - https://www.coursera.org/course/principlescomputing</p>
+
+<p>Intro to Theoretical Computer Science https://www.udacity.com/course/cs313</p>
+
+<h3>Algorithms</h3>
+
+<p>Algorithms, Part I: https://www.coursera.org/course/algs4partI</p>
+
+<p>Algorithms, Part II https://www.coursera.org/course/algs4partII</p>
+
+<p>Algorithms https://www.udacity.com/course/cs215</p>
+
+<p>Algorithms: Design and Analysis, Part I (https://www.coursera.org/course/algo)</p>
+
+<p>Algorithms: Design and Analysis, Part II (https://www.coursera.org/course/algo2)</p>
+
+<p>Analysis of Algorithms https://www.coursera.org/course/aofa</p>
+
+<p>Algorithmic Thinking https://www.coursera.org/course/algorithmicthink</p>
+
+<p>Discrete Optimization https://www.coursera.org/course/optimization</p>
+
+<h3>Big-O</h3>
+
+<p>Big-O Cheat Sheet http://bigocheatsheet.com/</p>
+
+<p>Codecademy Big O Course http://www.codecademy.com/courses/big-o/0/1</p>
+
+<h3>Misc</h3>
+
+<p>Introduction to Bitwise Operators http://www.codecademy.com/courses/introduction-to-bitwise-operators/0/1</p>
+
+<p>Stacks and Queues http://www.codecademy.com/courses/stacks-and-queues/0/1</p>
+
+<p>Recursive Functions http://www.codecademy.com/courses/javascript-lesson-149/0/1</p>
+
+<p>coursera, udacity, mit-edx</p>
 
 <h1>Ruby &amp; Rails</h1>
 
