Update CS Foundations section

--- a/index.html
+++ b/index.html
@@ -218,17 +218,29 @@
 
 <h3>Fundamentals</h3>
 
-<p>Computer Science 101 - (Review) https://www.coursera.org/course/cs101</p>
+<h3><a href="https://www.coursera.org/course/cs101">Computer Science 101</a></h3>
 
-<p>Intro to Computer Science - https://www.udacity.com/course/cs101</p>
+<p><a href="https://www.coursera.org/course/cs101">https://www.coursera.org/course/cs101</a></p>
 
-<p>Introduction to Computer Programming, Part 1 https://www.edx.org/course/iitbombayx/iitbombayx-cs101-1x-introduction-1447#.U2uWha1dXvY</p>
+<p>This Stanford course teaches the essential ideas of Computer Science. Most of this is complete review for you, but later topics in the syllabus may cover some stuff you aren&#39;t familiar with. It&#39;s worth a run through.</p>
 
-<p>Introduction to Computer Programming, Part 2 https://www.edx.org/course/iitbombayx/iitbombayx-cs101-2x-introduction-1448#.U2uWj61dXvY</p>
+<h3><a href="https://www.udacity.com/course/cs101">Intro to Computer Science</a></h3>
 
-<p>Principles of Computing - https://www.coursera.org/course/principlescomputing</p>
+<p><a href="https://www.udacity.com/course/cs101">https://www.udacity.com/course/cs101</a></p>
 
-<p>Intro to Theoretical Computer Science https://www.udacity.com/course/cs313</p>
+<p>In this introductory course, you&#39;ll learn and practice key computer science concepts by building your own versions of popular web applications. Again, much of this will be review (except for the fact that it&#39;s in Python), but there are some very useful tidbits here, especially in the section about building a search engine.</p>
+
+<h3><a href="https://www.edx.org/course/iitbombayx/iitbombayx-cs101-1x-introduction-1447#.U2uWha1dXvY">Introduction to Computer Programming, Part 1</a></h3>
+
+<p><a href="https://www.edx.org/course/iitbombayx/iitbombayx-cs101-1x-introduction-1447#.U2uWha1dXvY">https://www.edx.org/course/iitbombayx/iitbombayx-cs101-1x-introduction-1447#.U2uWha1dXvY</a></p>
+
+<p>This course covers algorithms, basic data types, sorting and searching, pointers, and many other basics of Computer Science.</p>
+
+<h3><a href="https://www.udacity.com/course/cs313">Intro to Theoretical Computer Science</a></h3>
+
+<p><a href="https://www.udacity.com/course/cs313">https://www.udacity.com/course/cs313</a></p>
+
+<p>This class teaches you about basic concepts of theoretical computer science—such as NP-completeness—and what they imply for solving tough algorithmic problems.</p>
 
 <h3>Algorithms</h3>
 
